<resources>
    <string name="app_name">OnlineMarket</string>
    <string name="no_internet_connection">خطا در اتصال به اینترنت</string>
    <string name="problem_response">خطا در برقراری ارتباط</string>

    <string name="list_category_menu">لیست دسته بندی محصولات</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="new_products">جدید ترین محصولات</string>
    <string name="visited_products">پر بازدید ترین محصولات</string>
    <string name="rated_products">پر امتیاز ترین محصولات</string>
    <string name="progress_product">در حال دریافت اطلاعات محصول</string>
    <string name="progress_category">در حال دریافت دسته بندی ها</string>
    <string name="product_info">مشخصات</string>
    <string name="product_description">توضیحات</string>
    <string name="no_item">محصولی یافت نشد</string>
    <string name="load_data">در حال بارگذاری اطلاعات</string>
    <string name="search">جستجو کردن محصول</string>
    <string name="all_product_list">لیست کامل</string>
    <string name="no_page">صفحه ی بیشتری یافت نشد</string>
    <string name="try_again">دوباره تلاش کن</string>
    <string name="shop_bag">سبد خرید</string>
    <string name="add_shop_successfully">محصول به سبد خرید اضافه شد.</string>
    <string name="shopping_final_sum">جمع خرید کل</string>
    <string name="submit_shopping">خرید خود را نهایی کنید</string>
    <string name="full_price">قیمت کل</string>
    <string name="final_price">قیمت نهایی</string>
    <string name="delete">حذف</string>
    <string name="price_format">  %s ریال</string>
    <string name="dialog_bag_question">آیا مایل به حذف این محصول از سبد خرید هستید؟</string>
    <string name="like_dialog_question">آیا مایل به حذف این محصول از لیست علاقه مندی ها هستید؟</string>
    <string name="liked_products_list">لیست محصولات مورد علاقه</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="filtering">رنگ، نوع، قیمت و…</string>
    <string name="filter">فیلتر کردن</string>
    <string name="sort">مرتب سازی</string>
    <string name="check_box_newest">جدید ترین</string>
    <string name="check_box_rated">پر امتیاز ترین</string>
    <string name="check_box_selles">پر بازدید ترین</string>
    <string name="check_box_cost_low_high">قیمت از کم به زیاد</string>
    <string name="check_box_cost_high_low">قیمت از زیاد به کم</string>
    <string name="check_box_featured">ویژه</string>
    <string name="filter_action_bar">فیلتر کردن محصول</string>
    <string name="featured_products">محصولات ویژه</string>
    <string name="web_page">وب سایت</string>
    <string name="channel_id">121</string>
    <string name="channel_name">Online Market</string>
    <string name="channel_desc">خبر دادن محصولات جدید</string>
    <string name="notif_new_product">محصول جدید!</string>

    <string name="province"> %s : استان</string>
    <string name="city"> %s : شهر</string>
    <string name="submit_info_component">ثبت اطلاعات و ادامه خرید</string>
    <string name="customer_name">نام و نام خانوادگی</string>
    <string name="postal_code">کد پستی</string>
    <string name="customer_address">آدرس</string>
    <string name="customer_province">استان</string>
    <string name="customer_city">شهر</string>
    <string name="submit_customer">ثبت اطلاعات</string>
    <string name="empty_error">لطفا فیلد خالی را پر کنید.</string>
    <string name="successfully">با موفقیت انجام شد</string>
    <string name="email">آدرس ایمیل</string>
    <string name="email_wrong">اشکال در نوع ایمیل</string>
    <string name="product_number">تعداد:</string>

    <string name="call_number">شماره تماس : </string>

    <string name="related_products">محصولات مشابه</string>
    <string name="time_choosing">انتخاب زمان</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notif_received">Visible Fragment is Received</string>
    <string name="title_activity_maps">Map</string>
    <string name="cart">سبد خرید</string>
    <string name="submit_time">ثبت</string>
    <string name="service_on">دریافت نوتیفیکیشن</string>
    <string name="off_service">خاموش کردن نوتیفیکیشن</string>
    <string name="on_service">روشن کردن نوتیفیکیشن</string>
    <string name="choose_time">زمان دلخواه خود را انتخاب کنید</string>
    <string name="submit_time_done">اعلان با موفقیت ثبت شد</string>
    <string name="time_limit">زمان انتخابی باید حداقل بزرگتر از 1 باشد</string>
    <string name="service_turmed_off">سرویس اعلان خاموش گردید.</string>


    <string-array name="time_spinner">
        <item>3</item>
        <item>5</item>
        <item>8</item>
        <item>12</item>

    </string-array>


</resources>
