<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/sorts_radio_group"
    android:layout_height="300dp"
    android:layout_margin="8dp"
    android:padding="8dp"
    tools:context=".controller.fragment.SortProductsDialogFragment">
    <RadioButton
        android:id="@+id/newest_check_box"
        android:text="@string/check_box_newest"
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:layout_height="wrap_content" />
    <RadioButton
        android:id="@+id/rated_check_box"
        android:textSize="30sp"
        android:text="@string/check_box_rated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioButton
        android:id="@+id/visited_check_box"
        android:textSize="30sp"
        android:text="@string/check_box_selles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioButton
        android:id="@+id/high_to_low_check_box"
        android:textSize="30sp"
        android:text="@string/check_box_cost_high_low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioButton
        android:id="@+id/low_to_high_check_box"
        android:textSize="30sp"
        android:text="@string/check_box_cost_low_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioButton
        android:id="@+id/featured_check_box"
        android:textSize="30sp"
        android:text="@string/check_box_featured"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RadioGroup>