<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:padding="4dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/root_layout"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/product_shop_bag_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/root_layout"
                    app:layout_constraintEnd_toEndOf="@id/root_layout"
                    app:layout_constraintTop_toTopOf="@id/root_layout" />

                <TextView
                    android:id="@+id/product_shop_bag_name_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toStartOf="@+id/product_shop_bag_image"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@id/root_layout"
                    app:layout_constraintTop_toTopOf="@id/root_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/full_price_text_view"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/full_price"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/final_price_text_view"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_green_dark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_green_dark"
                    android:text="@string/final_price"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/delete_product_bag_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:text="@string/delete"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />



    </LinearLayout>


</androidx.cardview.widget.CardView>